add default image for title details

--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <img class="img-fluid" data-bind="attr:{src: poster}" />
+                <img class="img-fluid" data-bind="attr:{src: poster}" onerror=src="resources/image-placeholder.png" />
             </div>
             <div class="col-6">
                 <p>Runtime: <span data-bind="text: runTimeMinutes"></span> minutes</p>
