--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -10,26 +10,28 @@
 </svg> </span>
    
     
-    
+ 
     
     <form class="AVAST_PAM_signupform AVAST_PAM_loginform user_form col-sm">
-    
+        
         <button data-bind="click: isEditMode" type="button" class="btn btn-secondary border">Edit</button>
        
         <button data-bind="click: saveSettings" type="button" class="btn btn-secondary border">Save</button>
-    
+        
         <legend class="border-bottom">User info</legend>
             <div class="form-group row">
             <label  class="col-sm-2 col-form-label" for="first_name">First name:</label>
                 <div class="col-sm-10">
-            <input data-bind="textInput: fName, enable: 'editMode'" readonly="" class="form-control-plaintext user_info_fields border-bottom" value="" id="first_name">
+                    <input data-bind="text: fName" readonly="" id="first_name">
+           <!-- <input data-bind="textInput: fName" readonly="" class="form-control-plaintext user_info_fields border-bottom" value="" id="first_name"> -->
+               
                 </div>
             </div>
 
             <div class="form-group row">
                 <label  class="col-sm-2 col-form-label" for="last_name">Last name:</label>
                 <div class="col-lg-10">
-                    <input data-bind="textInput: lastName, enable: 'editMode'" readonly="" class="form-control-plaintext user_info_fields border-bottom" value="" id="last_name">
+                    <input data-bind="value: lastName"  class="form-control-plaintext user_info_fields border-bottom" id="last_name">
                 </div>
             </div>
 
@@ -39,10 +41,7 @@
                     <input data-bind="textInput: email" readonly="" class="form-control-plaintext user_info_fields border-bottom" value="" id="e_mail">
                 </div>
             </div>
-        
- 
     </form>
-
     </div>
     
 
