--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -22,7 +22,7 @@
             <div class="form-group row">
             <label  class="col-sm-2 col-form-label" for="first_name">First name:</label>
                 <div class="col-sm-10">
-                    <input data-bind="text: fName" readonly="" id="first_name">
+                    <input data-bind="text: firstName" readonly="" id="first_name">
            <!-- <input data-bind="textInput: fName" readonly="" class="form-control-plaintext user_info_fields border-bottom" value="" id="first_name"> -->
                
                 </div>
