--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -6,7 +6,7 @@
                     <legend>Create Account</legend>
                     <div class="form-group" data-children-count="1">
                         <label class="col-form-label" for="firstName">First name</label>
-                        <input data-bind="text:firstName" type="text" class="form-control" placeholder="Jon" id="firstName">
+                        <input data-bind="text:firstName" type="text" class="form-control" placeholder="John" id="firstName">
                     </div>
                     <div class="form-group" data-children-count="1">
                         <label class="col-form-label" for="lastName">Last name</label>
@@ -14,7 +14,7 @@
                     </div>
                     <div class="form-group" data-children-count="1">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input data-bind="text:email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="jondoe@example.com" data-kwimpalastatus="alive" data-kwimpalaid="1607009151902-2">
+                        <input data-bind="text:email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="johndoe@example.com" data-kwimpalastatus="alive" data-kwimpalaid="1607009151902-2">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group" data-children-count="1">
