--- a/Portfolio-2/WebService/wwwroot/js/components/login/login.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/login/login.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="form-group" data-children-count="1">
                         <label class="col-form-label" for="username">Username</label>
-                        <input data-bind="text:username" type="text" class="form-control" placeholder="username" id="username">
+                        <input data-bind="text:username" type="text" class="form-control" placeholder="JohnDoe01" id="username">
                     </div>
                     <div class="form-group" data-children-count="1">
                         <label for="exampleInputPassword1">Password</label>
