--- a/Portfolio-2/WebService/wwwroot/js/components/actorList/actorList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/actorList/actorList.html
@@ -7,7 +7,15 @@
                            aria-label="Search...">
                 <button data-bind="click: getActorData" class="btn btn-primary my-2 my-sm-0"
                             data-toggle="button" aria-pressed="false" autocomplete="off">Search</button>
-                <p>Actor name: <span data-bind="text: actors().primaryName"></span></p>
+            </div>
+            <div class="row" data-bind="foreach: actors">
+                <div class="col-lg-4">
+                    <p>Tconst: <span data-bind="text: tconst"></span></p>
+                    <p>Nconst: <span data-bind="text: nconst"></span></p>
+                    <p>Ordering: <span data-bind="text: ordering"></span></p>
+                    <p>Category: <span data-bind="text: category"></span></p>
+                    <br>
+                </div>
             </div>
         </div>
     </div>
