fixed bug when registering users by adding salt column to user table in db and getting users by username instead user id

--- a/Portfolio-2/WebService/wwwroot/js/components/actorList/actorList.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/actorList/actorList.html
@@ -1,7 +1,7 @@
 <div>
     <div class="container" data-bind="">
         <div class="row">
-            <div class="col-12">
+            <div class="col-lg-12">
                 <h1>Actor List</h1>
                 <input data-bind="value: searchString" class="form-control mr-sm-2" type="text" placeholder="Search"
                            aria-label="Search...">
