--- a/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/titleDetails/titleDetails.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-lg-6">
-                <img class="img-fluid" data-bind="attr:{src: poster}" onerror=src="resources/image-placeholder.png" />
+                <img class="img-fluid" data-bind="attr:{src: poster}" onerror=src="resources/image-placeholder.svg" />
             </div>
             <div class="col-sm-12 col-lg-6">
                 <p>Runtime: <span data-bind="text: runTimeMinutes"></span> minutes</p>
@@ -48,6 +48,5 @@
                 </div>
             </div>
         </div>
-        
     </div>
 </div>    
