--- a/Portfolio-2/WebService/wwwroot/js/components/home/home.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/home/home.html
@@ -1,6 +1,6 @@
 ﻿<div class="container" data-bind="template: currentTemplate"></div>
-<h1 data-bind="home" style="border-style: solid; border-color: red">Welcome to the ultimate moviecollection</h1>
-<h2>The only moviedatabase you'll ever need</h2>
+<h1 data-bind="home" style="border-style: solid; border-color: red">Welcome to the front</h1>
+<h2>Example bodytext</h2>
 <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
 <p><small>This line of text is meant to be treated as fine print.</small></p>
 <p>The following is <strong>rendered as bold text</strong>.</p>
