--- a/Portfolio-2/WebService/wwwroot/css/style.css
+++ b/Portfolio-2/WebService/wwwroot/css/style.css
@@ -11,6 +11,11 @@
     object-fit: cover;
 }
 
+.poster{
+    margin: 1%;
+    width: 80%;
+}
+
 .poster-container {
     width: 250px;
     height: 333px;
