--- a/Portfolio-2/WebService/wwwroot/js/components/home/home.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/home/home.html
@@ -1,8 +1,13 @@
 ﻿<div class="container" data-bind="template: currentTemplate"></div>
-<h1 data-bind="home" style="border-style: solid; border-color: red">Welcome to movie finder</h1>
-<h2>The only moviedatabase you will ever need!</h2>
-<p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-<p><small>This line of text is meant to be treated as fine print.</small></p>
-<p>The following is <strong>rendered as bold text</strong>.</p>
-<p>The following is <em>rendered as italicized text</em>.</p>
-<p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+<div class="jumbotron">
+    <h1 data-bind="home" class="display-3">Welcome to Movie Finder</h1>
+    <h2>The only moviedatabase you will ever need!</h2>
+    <p class="lead">This is a movie searching website where you can look up information on all types of movies, tv-shows
+        and actors. You can also sign up as a user and give ratings as well as bookmark content and save notes on movies
+        and actors. </p>
+    <hr class="my-4">
+    <p>It is part of a student project at Roskilde University.</p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </p>
+</div>
