add save user login jwtToken to localStorage

--- a/Portfolio-2/WebService/wwwroot/js/components/home/home.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/home/home.html
@@ -11,3 +11,12 @@
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
 </div>
+<div class="form-group" data-children-count="1">
+    <label class="col-form-label" for="username">Username</label>
+    <input data-bind="value: username" type="text" class="form-control" placeholder="JohnDoe01" id="username">
+</div>
+<div class="form-group" data-children-count="1">
+    <label for="exampleInputPassword1">Password</label>
+    <input data-bind="value: password" type="password" class="form-control" id="exampleInputPassword1" placeholder="superSecretPassword123" data-kwimpalastatus="alive" data-kwimpalaid="1607009151902-0">
+</div>
+<button type="button" class="btn btn-primary" data-bind="click: loginUser">Login</button>
