--- a/Portfolio-2/WebService/wwwroot/js/components/home/home.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/home/home.html
@@ -1,5 +1,4 @@
-﻿<div class="container" data-bind="template: currentTemplate"></div>
-<div class="jumbotron">
+﻿<div class="jumbotron">
     <h1 data-bind="home" class="display-3">Welcome to Movie Finder</h1>
     <h2>The only moviedatabase you will ever need!</h2>
     <p class="lead">This is a movie searching website where you can look up information on all types of movies, tv-shows
